--- a/ios-developer.html
+++ b/ios-developer.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ancestry/faf77608-aa87-490f-96de-108a33467903'>Ancestry - Senior iOS Developer (mobile apps)- Ancestry (Lehi, UT)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/faf77608-aa87-490f-96de-108a33467903'>Ancestry - Senior iOS Developer (mobile apps)- Ancestry (Lehi, UT)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -108,7 +108,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://xfive.recruitee.com/o/ios-developer-remote'>iOS Developer, Remote - Xfive</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://xfive.recruitee.com/o/ios-developer-remote'>iOS Developer, Remote - Xfive</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... We are looking for talented mid-level to senior iOS developers. What we offer. 
 Tired of spending your valuable time dealing with clients directly, estimating,?...</p>
@@ -117,7 +117,7 @@ Tired of spending your valuable time dealing with clients directly, estimating,?
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semios.workable.com/j/3533BC80C8'>Semios - Jobs: JavaScript Developer Co-op - Apply online</a></h5> 
+<h5><a href='https://semios.workable.com/j/3533BC80C8'>Semios - Jobs: JavaScript Developer Co-op - Apply online</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -184,11 +184,11 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AjnaInfotech/743999691821035-ios-developer-on-w2-usc-gc-opt-cpt-tn-h4-ead-l2-ead-'>Ajna Infotech iOS Developer on W2 - USC, GC, OPT, CPT, TN, H4- EAD, L2-EAD, | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AjnaInfotech/743999691821035-ios-developer-on-w2-usc-gc-opt-cpt-tn-h4-ead-l2-ead-'>Ajna Infotech iOS Developer on W2 - USC, GC, OPT, CPT, TN, H4- EAD, L2-EAD, | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CrossBorderTalents1/743999682221403-ios-developer-to-work-in-lisbon-portugal'>Cross Border Talents IOS Developer to Work In Lisbon, Portugal | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CrossBorderTalents1/743999682221403-ios-developer-to-work-in-lisbon-portugal'>Cross Border Talents IOS Developer to Work In Lisbon, Portugal | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
