--- a/devops.html
+++ b/devops.html
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/carproof/job/o8wAafw8'>CARFAX Canada Careers - DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/carproof/job/o8wAafw8'>CARFAX Canada Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/patientslikeme/jobs/1779627?gh_jid=1779627'>Job Application for Senior/Principal DevOps Engineer at PatientsLikeMe</a></h5> 
+<h5><a href='https://boards.greenhouse.io/patientslikeme/jobs/1779627?gh_jid=1779627'>Job Application for Senior/Principal DevOps Engineer at PatientsLikeMe</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -104,7 +104,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -112,7 +112,7 @@
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=ot7kafwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nVeQTKw7'>Benefitfocus Careers - Sr. DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=ot7kafwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nVeQTKw7'>Benefitfocus Careers - Sr. DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -153,7 +153,7 @@ leading?...</p>
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DellInternationalServices/743999692248604-devops-engineer'>Dell International Services DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DellInternationalServices/743999692248604-devops-engineer'>Dell International Services DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -196,11 +196,11 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4367688002'>Job Application for DevOps Engineer- Database Infrastructure at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4367688002'>Job Application for DevOps Engineer- Database Infrastructure at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://firstwestcu.referrals.selectminds.com/jobs/devops-engineer-1704'>DevOps Engineer - First West Credit Union Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://firstwestcu.referrals.selectminds.com/jobs/devops-engineer-1704'>DevOps Engineer - First West Credit Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -258,7 +258,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/264866-devops-programmierer-linux-php'>Job @ talpasolutions (Essen): DevOps Programmierer... | JOIN</a></h5> 
+<h5><a href='https://talpasolutions.join.com/jobs/264866-devops-programmierer-linux-php'>Job @ talpasolutions (Essen): DevOps Programmierer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -336,7 +336,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Senior Software Engineer (DevOps) at QuadPay.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/5B53BAEF07'>OneinaMil - Jobs: DevOps Engineer - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/5B53BAEF07'>OneinaMil - Jobs: DevOps Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of DevOps Engineer at OneinaMil.</p>
 <hr/>
@@ -360,7 +360,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/cern/743999692087623-it-development-and-operations-tools-technician-devops-tte-programme-'>CERN IT Development and Operations tools Technician - DevOps (TTE Programme) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/cern/743999692087623-it-development-and-operations-tools-technician-devops-tte-programme-'>CERN IT Development and Operations tools Technician - DevOps (TTE Programme) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -407,7 +407,7 @@ published: 08.03.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://twincap.join.com/jobs/260855-devops-engineer-senior-devops-engineer'>Job @ TwinCap (Z?rich): DevOps Engineer / Senior D... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/260855-devops-engineer-senior-devops-engineer'>Job @ TwinCap (Z?rich): DevOps Engineer / Senior D... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 4 Tagen ... TwinCap GmbH has a job opening for DevOps Engineer / Senior DevOps 
 Engineer in Z?rich (published: 19.07.2019). Apply now or check the other 
