--- a/frontend.html
+++ b/frontend.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://property-meld.breezy.hr/p/3ac7edfbda85-frontend-engineer-remote'>Frontend Engineer (Remote) at Property Meld</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/iflix/job/oDVDafw5'>iflix Careers - Senior Frontend Engineer - React</a></h5> 
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/labineassociates/job/7sx4k69rsmsjrryggdifk17qfh'>Sitecore Front End Developer (Hollywood, Florida) | Job Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/labineassociates/job/7sx4k69rsmsjrryggdifk17qfh'>Sitecore Front End Developer (Hollywood, Florida) | Job Opportunities</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -120,7 +120,7 @@
 <p><span class="badge badge-light">Istanbul Istanbul</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oNJW9fwl&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=n431TKwg'>ServiceNow Careers - Senior Front End Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oNJW9fwl&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=n431TKwg'>ServiceNow Careers - Senior Front End Software Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara,</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -148,7 +148,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1788975'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1788975'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -230,7 +230,7 @@ the?...</p>
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999692226198-aem-frontend-tech-lead'>Merkle Inc. AEM Frontend Tech Lead | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999692226198-aem-frontend-tech-lead'>Merkle Inc. AEM Frontend Tech Lead | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -318,7 +318,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://myndshft.workable.com/j/B5B2B005D8'>Myndshft - Jobs: Senior Front-end Developer - Apply online</a></h5> 
+<h5><a href='https://myndshft.workable.com/j/B5B2B005D8'>Myndshft - Jobs: Senior Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Mesa, Arizona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -338,7 +338,7 @@ the?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://zenabis.applytojob.com/apply/R9BI9hDQ48/Front-End-Developer'>Front End Developer - Zenabis - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zenabis.applytojob.com/apply/R9BI9hDQ48/Front-End-Developer'>Front End Developer - Zenabis - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -365,7 +365,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/castlegroup/job/oEtBafwC'>Castle Group Careers - Front Desk Administrative Attendant</a></h5> 
+<h5><a href='https://jobs.jobvite.com/castlegroup/job/oEtBafwC'>Castle Group Careers - Front Desk Administrative Attendant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -393,7 +393,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Segic/743999692130762-developpeur-front-end-stage-'>Segic D?veloppeur front end (stage) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Segic/743999692130762-developpeur-front-end-stage-'>Segic D?veloppeur front end (stage) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
